--- a/digital_induction.css
+++ b/digital_induction.css
@@ -21,8 +21,7 @@ color: #ffffff;
 background-color: #000000;
 margin: 1.5em 0em 0.5em 0em;
 padding: 0px 0px 2px 0px;
-border-bottom: 1px solid; 
-border-color: #ed1266;}
+}
 
 h3 {
 font-size: 1.25em;
