--- a/digital_induction.css
+++ b/digital_induction.css
@@ -20,20 +20,22 @@ font-weight: normal;
 color: #ffffff;
 background-color: #000000;
 margin: 1.5em 0em 0.5em 0em;
-padding: 0px 0px 2px 0px;
+padding: 10px;
 }
 
 h3 {
 font-size: 1.25em;
 color: #ffffff;
 background-color: #000000;
-margin: 1.5em 0em 0.7em 0em;}
+margin: 1.5em 0em 0.7em 0em;
+padding: 10px;}
 
 h4 {
 font-size: 1em;
 font-style: bold;
 color: #000000;
-margin: 1.5em 0em 0.85em 0em;}
+margin: 1.5em 0em 0.85em 0em;
+padding: 5px;}
 
 h5 {
 font-size: 1em;
