--- a/digital_induction.css
+++ b/digital_induction.css
@@ -39,15 +39,15 @@ padding: 5px;}
 
 h5 {
 font-size: 1em;
-color: #000000;
-font-weight: normal;
+color: #333333;
+font-weight: bold;
 margin: 1.5em 0em 0.85em 0em;}
 
 h6 {
 font-size: 1em;
 font-weight: normal;
 font-style: italic;
-color: #000000;
+color: #333333;
 margin: 0em 0em 0.85em 0em;}
 
 /*Paragraph styles*/
