--- a/digital_induction.css
+++ b/digital_induction.css
@@ -6,8 +6,7 @@ padding: 0;
 text-align: left;}
 
 h1 {
-margin: -32px -32px 15px -26px;
-padding: 13px 22px 6px 25px;
+padding: 15px;
 font-style: normal;
 font-weight: normal;
 font-size: 2.25em;
