--- a/digital_induction.css
+++ b/digital_induction.css
@@ -34,14 +34,14 @@ margin: 1.5em 0em 0.7em 0em;
 padding: 10px;}
 
 h4 {
-font-size: 1em;
-font-style: bold;
+font-size: 1.1em;
+font-weight: bold;
 color: #000000;
 margin: 1.5em 0em 0.85em 0em;
 padding: 5px;}
 
 h5 {
-font-size: 1em;
+font-size: 1.1em;
 color: #333333;
 font-weight: bold;
 margin: 1.5em 0em 0.85em 0em;}
