--- a/digital_induction.css
+++ b/digital_induction.css
@@ -2,6 +2,11 @@
     max-width: 100%;
 }
 
+@media (min-width: 992px)
+.container {
+    max-width: 2000px;
+}
+
 body {
 font-family: Verdana, Helvetica, Arial, sans-serif;
 font-size: 16px;
