--- a/digital_induction.css
+++ b/digital_induction.css
@@ -1,12 +1,24 @@
+/* To get full-width pages in the iframe */
 .container {
     max-width: 100%;
 }
 
 @media (min-width: 992px)
 .container {
-    max-width: 2000px;
+    max-width: 100%;
 }
 
+@media (min-width: 768px)
+.container {
+    max-width: 100%;
+}
+
+@media (min-width: 576px)
+.container {
+    max-width: 100%;
+}
+
+/* General style sheet */
 body {
 font-family: Verdana, Helvetica, Arial, sans-serif;
 font-size: 16px;
