--- a/digital_induction.css
+++ b/digital_induction.css
@@ -54,8 +54,7 @@ h4 {
 font-size: 1.1em;
 font-weight: bold;
 color: #000000;
-margin: 1.5em 0em 0.85em 0em;
-padding: 5px;}
+margin: 1.5em 0em 0.85em 0em;}
 
 h5 {
 font-size: 1.1em;
