--- a/digital_induction.css
+++ b/digital_induction.css
@@ -80,6 +80,8 @@ margin: 1em 0px 1em 0px;}
 
 .btn-light {color: #212529;background-color: #ffffff;border-color: #ffffff;}
 
+a {color: #ed1266;}
+
 a:link {color: #ed1266;}
 
 a:visited {color: #999;}
