--- a/listfilter.css
+++ b/listfilter.css
@@ -1,6 +1,9 @@
 .filterDiv {
   display: none;
   padding: 10px 0px;
+  border-bottom-color: #dee2e6;
+  border-bottom-width: thin;
+  border-bottom-style: solid;
 }
 
 .show {
