--- a/digital_induction.css
+++ b/digital_induction.css
@@ -107,6 +107,10 @@ div.btn-group * i.fa-check {
 
 .btn-group * a {margin-left: 5px;}
 
+.calendar {
+    margin: 1.0em 0;
+}
+
 /* to add list filter functionality */
 .filterDiv {
   display: none;
